# ai_morpheus

./: .env  .gitignore  LICENSE  README.md  ai.py  ai_tools.py  controller.py  database.py  helper.py  main.py  models.py  pyproject.toml  requirements.txt  ruff.toml
src/: .env  ai.py  ai_tools.py  controller.py  database.py  helper.py  main.py  models.py  run.sh
src/static/js/: script.js  test.js
src/templates/: account.html  base.html  index.html  login.html  logout.html  register.html
static/js/: script.js
templates/: index.html
